package com.example.bookshelf;

public enum RequestStatus {
    PENDING,
    ACCEPTED
}
